--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body {
   background-color: #000;
   color: white;
-  font-family: sans-serif;
+  font-family: Arial, sans-serif;
   text-align: center;
   margin: 0;
   padding: 0;
